--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,27 +1,11 @@
 
-
-.body {
- background-color: #f7f4f4;
-}
-
-.bodyA {
-	background-color: #eceaea;
-}
-
-.begin {
-	padding-top: 15px;
-}
-
-.color { background: #e02012 !important; }		
-
-.logo {
-	background-image: url("/img/grability-logo.png");
-}
-
-.profile {
-	background-image: url("/img/icons/man.png");
-}
-
+p {	text-align: justify;}
+.body { background-color: #f7f4f4; }
+.bodyA { background-color: #eceaea; }
+.begin { padding-top: 15px; }
+.color { background: #e02012 !important; color: #fff}
+.logo { background-image: url("/img/grability-logo.png"); }
+.profile { background-image: url("/img/icons/man.png"); }
 .iconHero {
    background-image: url("/img/icons/characters.png");
    background-repeat: no-repeat;
@@ -43,34 +27,11 @@
    margin-top: 17px;
    border: none;
 }
+.size {background-repeat: no-repeat;background-size: 100%;width: 50px;height: 50px;margin-left: 40%;}
+.body { background-color: }
+.imgCatalog {width: 160px;height: 160px;border-radius: 50%;margin-left: -25px;margin-top:  -10px;box-shadow: 2px 1px 2px 2px rgba(0,0,0,0.3);}
 
-.size {
-	background-repeat: no-repeat;
-    background-size: 100%;
-    width: 50px;
-    height: 50px;
-    margin-left: 20%;
-}
-
-.body {
- background-color: 
-}
-
-.imgCatalog {
-	width: 160px;
-    height: 160px;
-    border-radius: 50%;
-    margin-left: -25px;
-    margin-top:  -10px;
-    box-shadow: 2px 1px 2px 2px rgba(0,0,0,0.3);
-}
-
-.containerCatalog {
-  margin-left: 40px;
-  background-color: #ffffff;
-  margin-top: 35px;
-  min-height: 300px
-}
+.containerCatalog {margin-left: 40px;background-color: #ffffff;margin-top: 35px;min-height: 300px}
 
 .containerInsideView {
   float: left;
@@ -81,34 +42,23 @@
   overflow: hidden;
 }
 
-.btnBG {
-	background-color: #e02012 !important;
-	left: 160px;
-}
-
-.related {
-    width: 50%;
-    float: left;
-    padding: 6px;
-    height: 25px;
-    overflow: hidden;
-}
-
-.pSearch {
-  height: 30px;
-  padding: 8px;
-  border-bottom-style: inset;
-}
-
-.imgModal {
-	width: 160px;
-    height: 160px;
-    border-radius: 50%;
-    margin-right: 10px;
-    margin-left: 30px;
-    box-shadow: 2px 1px 2px 2px rgba(0,0,0,0.3)
-}
-
-p {
-	text-align: justify;
-}
+.btnBG { background-color: #e02012 !important; left: 160px;}
+.related { width: 50%; float: left; padding: 6px; height: 25px; overflow: hidden;}
+.pSearch { height: 30px; padding: 8px; border-bottom-style: inset;}
+.imgCharacter { width: 160px; height: 160px; border-radius: 50%; margin-right: 10px; margin-left: 30px; box-shadow: 2px 1px 2px 2px rgba(0,0,0,0.3) }
+.padding { padding-left:30px }
+.imgModal { width: 200px; }
+.sizeM { width: 600px; min-height: 420px;}
+.align { margin-top: 15px; }
+.left { margin-left: 46px; margin-top: -20px }
+.footer {position: absolute; bottom: 0px; width: 100%; }
+.btns { float: left;width: 50%;height: 55px;color: #f44336; padding-left: 10%;padding-top: 11px; }
+.buy { background-color: #9e9e9e; }
+.addFav { background-color: #333232 }
+.addFa { background-color: #e4e1e1; color: #000000}
+.iconCart {background-image: url(../img/icons/shopping-cart-primary.png); width: 40px;height: 40px; border-radius: 50%; float: left }
+.iconFav { background-image: url(../img/icons/favourites1.png); width: 40px;height: 40px; border-radius: 50%; float: left }
+.iconFa { background-image: url(../img/icons/btn-favourites-default.png); width: 40px;height: 40px; border-radius: 50%; float: left }
+.closeBtn { background-image: url(../img/icons/btn-close.png); width: 30px;height: 30px; border-radius: 50%; position: absolute;right: 10px;top: 10px }
+.textDiv { float: left; padding-left: 12px;padding-top: 10; }
+.searchIcon {position: absolute; top: 18px; right: 10px;}
