--- a/public/templates/profile.html
+++ b/public/templates/profile.html
@@ -10,7 +10,7 @@
     <md-dialog-content>
       <div class="md-dialog-content">
        <div class="row">
-        <div ng-repeat="comicsSave in comicsSaved" class="col-lg-4 col-md-4 col-xs-12" >
+        <div ng-repeat="comicsSave in comicsSaved  track by $index" class="col-lg-4 col-md-4 col-xs-12" >
           <div id="{{comicsSave.id}}" class="delete" ng-click="deleteComic(comicsSave.id)"></div>
           <img class="imgModal" src="{{comicsSave.photo}}">
           <p>{{comicsSave.name}}</p>
